logs/saavpedia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/saavpedia'...
Compiling './lib/python3.5/site-packages/saavpedia/ClassSAAVpedia.py'...
***   File "./lib/python3.5/site-packages/saavpedia/ClassSAAVpedia.py", line 36
    print "[{0}] Read only error, You can't change the URL!".format(theValue)
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/saavpedia/ClassSAAVpediaInput.py'...
***   File "./lib/python3.5/site-packages/saavpedia/ClassSAAVpediaInput.py", line 241
    print Exception
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/saavpedia/server'...
Compiling './lib/python3.5/site-packages/saavpedia/server/ClassSAAVpediaInputParser.py'...
***   File "./lib/python3.5/site-packages/saavpedia/server/ClassSAAVpediaInputParser.py", line 179
    print parser.toSqlCondition()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/saavpedia-0.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
